
    o	[g]sub(*, perl=TRUE) now also supports '\E' in order to *end*
	\U and \L case changes, thanks to a patch from Bill Dunlap.

    o	factor(), `levels<-`(), etc, now ensure that the resulting factor
	levels are unique (as was always the implied intention).  Factors
	with duplicated levels are still constructible by low-level means,
	but are now declared illegal.


BUG FIXES



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0 patched


NEW FEATURES

    o	new anyDuplicated(x) returns 0 (= FALSE) or the index of the
	first duplicated entry of x.


BUG FIXES

    o	The ... argument was not handled properly when ... was found
	in the enclosure of the current function, rather than in the
	function header itself.	 (This caused integrate() to fail in
	certain cases.)

    o	col2rgb("#00000080", TRUE) would return the background colour.
	(Reported by Hadley Wickham.)

    o	interaction() now ensures that its result's levels are unique.

    o	packageDescription() and hence sessionInfo() now report the correct
	package version also for a non-attached loaded namespace of
	a version different from the default lib.loc.



		CHANGES IN R VERSION 2.9.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	expand.grid() by default no longer coerces strings into factors.


NEW FEATURES

    o	Package 'Matrix' is now a recommended package contained in the
	basic R distribution.  It provides S4 classes and methods for
	dense and sparse matrices, often by using the numerical
	libraries Lapack and from the SuiteSparse collection CHOLMOD,
	CSparse, and SPQR among others.

    o	pdf() and postscript() gain a 'useKerning' argument to place
	strings using kerning (which had previously been ignored in
	display but not in strwidth), based in part on an idea and
	code from Ei-ji Nakama. The default is TRUE.
