@@ -1,5 +1,5 @@
 
-R version 2.10.0 Under development (unstable) (2009-04-06 r48294)
+R version 2.10.0 Under development (unstable) (2009-04-20 r48365)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -6252,12 +6252,12 @@ Error in .C(sym$address, NULL) :
   Incorrect number of arguments (1), expecting 5 for prho
 > ## were OK
 > 
-> 
+> options(keep.source = TRUE)
 > ## $<- on pairlists failed to duplicate (from Felix Andrews,
 > ## https://stat.ethz.ch/pipermail/r-devel/2009-January/051698.html)
 > foo <- function(given = NULL) {
 +     callObj <- quote(callFunc())
-+     if (!is.null(given)) callObj$given <- given
++     if(!is.null(given)) callObj$given <- given
 +     if (is.null(given)) callObj$default <- TRUE
 +     callObj
 + }
@@ -6283,4 +6283,68 @@ callFunc(default = TRUE)
 [1,] "-3.1450" " -31." "  0xabc" " -123" "   1.e+05"
 [2,] " -3.145" "  -31" "    abc" " -123" "    1e+05"
 > ## gave an error in pre-release versions of 2.9.0
+> 
+> ## (auto)printing of functions {with / without source attribute},
+> ## including primitives
+> sink(textConnection("of", "w")) ; c ; sink(NULL)
+> of2 <- capture.output(print(c))
+> stopifnot(identical(of2, of),
++           identical(of2, "function (..., recursive = FALSE)  .Primitive(\"c\")"))
+> ## ^^ would have failed up to R 2.9.x
+> foo
+function(given = NULL) {
+    callObj <- quote(callFunc())
+    if(!is.null(given)) callObj$given <- given
+    if (is.null(given)) callObj$default <- TRUE
+    callObj
+}
+> print(foo, useSource = FALSE)
+function (given = NULL) 
+{
+    callObj <- quote(callFunc(default = TRUE))
+    if (!is.null(given)) 
+        callObj$given <- given
+    if (is.null(given)) 
+        callObj$default <- TRUE
+    callObj
+}
+> attr(foo, "source") <- NULL
+> foo
+function (given = NULL) 
+{
+    callObj <- quote(callFunc(default = TRUE))
+    if (!is.null(given)) 
+        callObj$given <- given
+    if (is.null(given)) 
+        callObj$default <- TRUE
+    callObj
+}
+> (f <- structure(function(){}, note = "just a note",
++                 yada = function() "not the same"))
+function(){}
+attr(,"note")
+[1] "just a note"
+attr(,"yada")
+function () 
+"not the same"
+> print(f, useSource = FALSE) # must print attributes
+function () 
+{
+}
+attr(,"note")
+[1] "just a note"
+attr(,"yada")
+function () 
+"not the same"
+> print.function <- function(x, ...) { str(x,...); invisible(x) }
+> print.function
+function (x, ...)  
+ - attr(*, "source")= chr "function(x, ...) { str(x,...); invisible(x) }"
+> f
+function ()  
+ - attr(*, "source")= chr "function(){}"
+ - attr(*, "note")= chr "just a note"
+ - attr(*, "yada")=function ()  
+  ..- attr(*, "source")= chr "function() \"not the same\""
+> rm(print.function)
 > 
